<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/navCategory"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/nav_category" />
        <item
            android:id="@+id/navCart"
            android:icon="@drawable/ic_menu_cart"
            android:title="@string/nav_cart" />
        <item
            android:id="@+id/navOrdersHistory"
            android:icon="@drawable/ic_menu_orders_history"
            android:title="@string/nav_orders_history" />
        <item
            android:id="@+id/navMyAccount"
            android:icon="@drawable/ic_my_account"
            android:title="@string/my_account" />
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/navLogin"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/login" />
    </group>
</menu>