<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.fragments.MyAccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/padding_extra_large_20"
                android:layout_marginRight="@dimen/padding_extra_large_20"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:text="@string/full_name_placeholder" />

            <TextView
                android:id="@+id/tvEmail"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFullName"
                android:layout_marginLeft="@dimen/padding_extra_large_20"
                android:layout_marginRight="@dimen/padding_extra_large_20"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:text="@string/email_placeholder" />

            <View
                android:id="@+id/devider"
                style="@style/Divider"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:layout_below="@+id/tvEmail"/>

            <TextView
                android:id="@+id/tvShippingAddress"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/devider"
                android:layout_marginLeft="@dimen/padding_extra_large_20"
                android:layout_marginRight="@dimen/padding_extra_large_20"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:text="@string/shipping_address" />

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvShippingAddress"
                android:layout_marginLeft="@dimen/padding_extra_large_20"
                android:layout_marginRight="@dimen/padding_extra_large_20"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:hint="@string/city"
                android:inputType="text"
                android:textSize="@dimen/text_size_extra_large_15" />

            <EditText
                android:id="@+id/etZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etCity"
                android:layout_marginLeft="@dimen/padding_extra_large_20"
                android:layout_marginRight="@dimen/padding_extra_large_20"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:hint="@string/zip_code"
                android:inputType="number"
                android:textSize="@dimen/text_size_extra_large_15" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etZipCode"
                android:layout_marginLeft="@dimen/padding_extra_large_20"
                android:layout_marginRight="@dimen/padding_extra_large_20"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:hint="@string/address"
                android:inputType="text"
                android:textSize="@dimen/text_size_extra_large_15" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etAddress"
                android:layout_marginLeft="@dimen/padding_extra_large_20"
                android:layout_marginRight="@dimen/padding_extra_large_20"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textSize="@dimen/text_size_extra_large_15" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_below="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/padding_extra_large_20"
                android:layout_marginRight="@dimen/padding_extra_large_20"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:background="@drawable/button"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/tvChangePassword"
                android:text="@string/change_password"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/padding_extra_large_20"
                android:layout_marginTop="@dimen/padding_extra_large_20"
                android:layout_below="@+id/tvSave"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"/>
        </RelativeLayout>

    </ScrollView>

</FrameLayout>