<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_extra_large_20"
            android:layout_marginRight="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_extra_large_15" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etCurrentPassword"
            android:layout_marginLeft="@dimen/padding_extra_large_20"
            android:layout_marginRight="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_extra_large_15" />

        <EditText
            android:id="@+id/etRetypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etNewPassword"
            android:layout_marginLeft="@dimen/padding_extra_large_20"
            android:layout_marginRight="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_extra_large_15" />

        <TextView
            android:id="@+id/tvChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRetypePassword"
            android:layout_marginLeft="@dimen/padding_extra_large_20"
            android:layout_marginRight="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:background="@drawable/button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:text="@string/change_password"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>